--- a/application/bettle/bettle-jpa/build.gradle
+++ b/application/bettle/bettle-jpa/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: "java"
 
 dependencies {
+    compileOnly "org.projectlombok:lombok:1.16.14"
     compile "org.springframework.boot:spring-boot-starter-thymeleaf:1.5.1.RELEASE"
     compile "org.springframework.boot:spring-boot-starter-logging:1.5.1.RELEASE"
     compile "org.springframework.boot:spring-boot-starter-data-jpa:1.5.1.RELEASE"
