Added two modules
1. bettle-repo module
   - Contains all repository interfaces
2. bettle-service module
   - COntains all service classes

--- a/application/bettle/bettle-jpa/build.gradle
+++ b/application/bettle/bettle-jpa/build.gradle
@@ -15,6 +15,7 @@ dependencies {
         exclude module: 'org.springframework.boot:spring-boot-starter-logging'
         exclude module: 'org.hibernate:hibernate-java8'
     }
+    compile(project(':bettle-repo'))
 
     testCompile "org.springframework.boot:spring-boot-starter-test:1.5.1.RELEASE"
     testCompile "com.h2database:h2:1.4.193"
